--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">test-android</string>
-    <string name="title_activity_main">test-android</string>
+    <string name="app_name">Test Android</string>
+    <string name="title_activity_main">Test Android</string>
     <string name="package_name">test.android</string>
     <string name="custom_url_scheme">test.android</string>
 </resources>
